--- a/src/templates/quizHost.phtml
+++ b/src/templates/quizHost.phtml
@@ -16,6 +16,7 @@
         <?php foreach ( $Questions as $Question ) : ?>
             <?php if ( $Question->R_ID == $Round->R_ID ) : ?>
                 <div class="quizHost Questions <?=$currentQuestion==$Question->Q_ID?'currentQuestion':''?>" id="<?=$currentQuestion==$Question->Q_ID?'scroll':''?>">
+                    <input type="hidden" name="Q_ID" value="<?=$Question->Q_ID?>" />
                     <?php if ( $Question->Q_Image_Question ) { ?>
                         <p class="Question"><img class="hostImage" src="/uploads/<?=$Question->Q_Image_Question?>" />
                             <?php if ( $Question->Q_Image_Answer ) { ?>
@@ -104,3 +105,5 @@
         </tbody>
     </table>
 </div>
+<!-- <script src="/js/jQuery.js"></script>
+<script src="/js/host.js"></script> -->
